--- a/src/components/filters/index.module.css
+++ b/src/components/filters/index.module.css
@@ -1,10 +1,21 @@
-.filter-container {
-  width: 18%;
-  background-color: white;
-  border-radius: 5px;
-  margin: 1%;
+
+@media only screen and (max-width:700px){
+  .filter-container {
+    width: 98%;
+    background-color: white;
+    border-radius: 5px;
+    margin: 1%;
+  }
 }
 
+@media only screen and (min-width:700px){
+  .filter-container {
+    width: 18%;
+    background-color: white;
+    border-radius: 5px;
+    margin: 1%;
+  }
+}
 
 .filter-section {}
 
