--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.container-div{
-  display: flex;
-}
+
 
 .title{
   margin: 0;
@@ -8,4 +6,17 @@
 
 .initial-container{
   background-color: #F5F5F5	;
+}
+
+@media only screen and (max-width:700px){
+  .container-div{
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (min-width:700px){
+  .container-div{
+    display: flex;
+  }
 }
