--- a/src/components/content/index.module.css
+++ b/src/components/content/index.module.css
@@ -1,10 +1,21 @@
-.content-container{
-    width:80%;
-    /* background-color:#F5F5F5; */
-    display: flex;
-    flex-wrap: wrap;
-}
 
+
+@media only screen and (min-width:700px){
+    .content-container{
+        width:80%;
+        /* background-color:#F5F5F5; */
+        display: flex;
+        flex-wrap: wrap;
+    }
+  }
+
+  @media only screen and (max-width:700px){
+    .content-container{
+        /* background-color:#F5F5F5; */
+        display: flex;
+        flex-wrap: wrap;
+    }
+  }
 
 .section-container{
     display: flex;
